# Encoder-Decoder-model

./: Dockerfile  README.md  Train.py  UI.py  app.py  converter.py  data.csv  data.py  generate_data.py  model.py  pyproject.toml  requirements.txt  sample.py  test.py  tokenizer.py  transformer_model.pth
logs/: events.out.tfevents.1721005142.LAPTOP-Q6I7C7SU.25360.0
runs/: events.out.tfevents.1722465062.LAPTOP-Q6I7C7SU.23780.0  events.out.tfevents.1722465065.LAPTOP-Q6I7C7SU.23780.1  events.out.tfevents.1722465866.LAPTOP-Q6I7C7SU.25412.0  events.out.tfevents.1722465957.LAPTOP-Q6I7C7SU.13212.0  events.out.tfevents.1722465960.LAPTOP-Q6I7C7SU.13212.1  events.out.tfevents.1722466209.LAPTOP-Q6I7C7SU.396.0  events.out.tfevents.1722466212.LAPTOP-Q6I7C7SU.396.1  events.out.tfevents.1722467241.LAPTOP-Q6I7C7SU.4232.0  events.out.tfevents.1722467245.LAPTOP-Q6I7C7SU.4232.1  events.out.tfevents.1722467447.LAPTOP-Q6I7C7SU.9040.0  events.out.tfevents.1722467450.LAPTOP-Q6I7C7SU.9040.1  events.out.tfevents.1722484299.LAPTOP-Q6I7C7SU.4716.0  events.out.tfevents.1722484303.LAPTOP-Q6I7C7SU.4716.1  events.out.tfevents.1722485534.LAPTOP-Q6I7C7SU.19896.0  events.out.tfevents.1722485653.LAPTOP-Q6I7C7SU.9728.0  events.out.tfevents.1722485656.LAPTOP-Q6I7C7SU.9728.1  events.out.tfevents.1722485850.LAPTOP-Q6I7C7SU.14784.0  events.out.tfevents.1722485853.LAPTOP-Q6I7C7SU.14784.1  events.out.tfevents.1722486090.LAPTOP-Q6I7C7SU.22096.0  events.out.tfevents.1722486093.LAPTOP-Q6I7C7SU.22096.1  events.out.tfevents.1722486304.LAPTOP-Q6I7C7SU.25528.0  events.out.tfevents.1722486551.LAPTOP-Q6I7C7SU.3496.0  (+64 more)
